--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">s195398 Moamals galgeleg</string>
+    <string name="app_name">s195398_Moamals_galgeleg</string>
 </resources>
